made tables visible - was having issue with them not appearing - removed opacity

--- a/Code/Lexi/html + CSS/css/lab03-CSS.css
+++ b/Code/Lexi/html + CSS/css/lab03-CSS.css
@@ -25,7 +25,7 @@ table {
 }
 div {
     background-color: green;
-    opacity: 0.3;
+
   }
 #page {
     padding: 10px;
